# color-systems

./: .gitignore  Cargo.toml  rustfmt.toml
color-systems/: Cargo.toml
color-systems-macros/: Cargo.toml
color-systems-macros/src/: lib.rs
color-systems/src/: circle_degrees.rs  color.rs  lib.rs  percentage_f32.rs
color-systems/src/advanced/: mod.rs
color-systems/src/models/: cmyk.rs  cmyk_float.rs  color_model.rs  hsl.rs  hsv.rs  mod.rs  rgb.rs  rgb_float.rs  shared.rs
colour-systems-testing-macros/: Cargo.toml
colour-systems-testing-macros/src/: lib.rs
